--- a/odataexample/pom.xml
+++ b/odataexample/pom.xml
@@ -13,13 +13,15 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.5.RELEASE</version>
+		<!-- <version>1.4.5.RELEASE</version> -->
+		<version>1.3.5.RELEASE</version>
 	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<odata.version>4.3.0</odata.version>
+		<querydsl.version>3.7.2</querydsl.version>
 	</properties>
 
 	<dependencies>
@@ -40,17 +42,20 @@
 		
 		<!-- QUERYDSL -->
 		<dependency>
-			<groupId>com.querydsl</groupId>
-			<artifactId>querydsl-core</artifactId>
-		</dependency>
-		<dependency>
-	    	<groupId>com.querydsl</groupId>
-			<artifactId>querydsl-apt</artifactId>
-			</dependency>
-		<dependency>
-			<groupId>com.querydsl</groupId>
-			<artifactId>querydsl-jpa</artifactId>
-		</dependency>
+		<groupId>com.mysema.querydsl</groupId>
+		<artifactId>querydsl-core</artifactId>
+		<version>${querydsl.version}</version>
+	</dependency>
+	<dependency>
+    	<groupId>com.mysema.querydsl</groupId>
+		<artifactId>querydsl-apt</artifactId>
+		<version>${querydsl.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>com.mysema.querydsl</groupId>
+		<artifactId>querydsl-jpa</artifactId>
+		<version>${querydsl.version}</version>
+	</dependency>
 		
 		<!-- JDBC -->
 		<!-- 
@@ -62,6 +67,7 @@
 		<dependency>
 			<groupId>net.sourceforge.jtds</groupId>
 			<artifactId>jtds</artifactId>
+			<version>1.3.1</version>
 			</dependency>
 		
 		<dependency>
@@ -88,30 +94,42 @@
 		
 	</dependencies>
 	
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>com.mysema.maven</groupId>
-				<artifactId>apt-maven-plugin</artifactId>
-				<version>1.1.3</version>
-				<executions>
-					<execution>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>process</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>target/generated-sources</outputDirectory>
-							<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-	
+  <build>
+       <plugins>
+           <plugin>
+               <groupId>org.springframework.boot</groupId>
+               <artifactId>spring-boot-maven-plugin</artifactId>
+           </plugin>
+           <plugin>
+			<groupId>com.mysema.maven</groupId>
+			<artifactId>apt-maven-plugin</artifactId>
+			<version>1.1.3</version>
+			<executions>
+				<execution>
+					<goals>
+						<goal>process</goal>
+					</goals>
+					<configuration>
+						<outputDirectory>target/generated-sources</outputDirectory>
+						<processor>com.mysema.query.apt.jpa.JPAAnnotationProcessor</processor>
+		            </configuration>
+	        	</execution>
+        	</executions>
+			<dependencies>
+				<dependency>
+					<groupId>com.mysema.querydsl</groupId>
+	                <artifactId>querydsl-apt</artifactId>
+	                <version>3.7.2</version>
+	            </dependency>
+	            <dependency>
+	                <groupId>com.mysema.querydsl</groupId>
+	                <artifactId>querydsl-jpa</artifactId>
+	                <classifier>apt</classifier>
+	                <version>3.7.2</version>
+	            </dependency>
+			</dependencies>
+		</plugin>
+       </plugins>
+   </build>
+   
 </project>
