--- a/odataexample/pom.xml
+++ b/odataexample/pom.xml
@@ -39,6 +39,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-jta-atomikos</artifactId>
+		</dependency>
 		
 		<!-- QUERYDSL -->
 		<dependency>
@@ -58,17 +62,18 @@
 		</dependency>
 		
 		<!-- JDBC -->
-		<!-- 
 		<dependency>
 			<groupId>com.microsoft</groupId>
 			<artifactId>sqljdbc4</artifactId>
 			<version>4</version>
-		</dependency> -->
+		</dependency>
+		
+		
+		<!-- JPA -->
 		<dependency>
-			<groupId>net.sourceforge.jtds</groupId>
-			<artifactId>jtds</artifactId>
-			<version>1.3.1</version>
-			</dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+		</dependency>
 		
 		<!-- APACHE OLINGO -->
 		<dependency>
@@ -100,6 +105,13 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	
+		<!-- JCACHE - HAZELCAST -->
+	    <dependency>
+			<groupId>com.hazelcast</groupId>
+    		<artifactId>hazelcast-all</artifactId>
+    		<version>3.5.5</version>
+		</dependency>
+		
 		<dependency>
 		    <groupId>com.google.guava</groupId>
 		    <artifactId>guava</artifactId>
