--- a/odataexample/src/main/resources/application.properties
+++ b/odataexample/src/main/resources/application.properties
@@ -1,9 +1,13 @@
-spring.datasource.url=jdbc:jtds:sqlserver://localhost:1433/EJERCICIO_JPA
-#spring.datasource.url=jdbc:jtds:sqlserver://SERVER2K8/EJERCICIO_JPA;instance=SERVER2K14
-spring.datasource.username=sa
-spring.datasource.password=rv760
-spring.datasource.driver-class-name=net.sourceforge.jtds.jdbc.Driver
-spring.datasource.platform=mssql
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialec
+database.serverName=localhost
+database.databaseName=EJERCICIO_JPA
+database.user=sa
+database.password=rv760
+
+hz.cluster.name=hzsb
+hz.cluster.pwd=rv760
+hz.mancenter.url=http://192.168.1.174:8080/mancenter-3.7.5
+
+spring.jta.log-dir=target/transaction-logs
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 #spring.jpa.show-sql=true
