Gestión de Prestamos

--- a/odataexample/src/main/resources/application.properties
+++ b/odataexample/src/main/resources/application.properties
@@ -11,3 +11,5 @@ hz.mancenter.url=http://192.168.1.174:8080/mancenter-3.7.5
 spring.jta.log-dir=target/transaction-logs
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 #spring.jpa.show-sql=true
+
+spring.jta.transaction-manager-id=odataexample
