--- a/odataexample/src/main/resources/application.properties
+++ b/odataexample/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 
-database.serverName=localhost
+#database.serverName=localhost
+#database.instanceName=
+database.serverName=server2k8
+database.instanceName=server2k14
 database.databaseName=EJERCICIO_JPA
 database.user=sa
 database.password=rv760
 
-hz.cluster.name=hzsb
+hz.cluster.name=EQ016
 hz.cluster.pwd=rv760
 hz.mancenter.url=http://192.168.1.174:8080/mancenter-3.7.5
 
