Soporte a multiples perfiles para multiples conexiones a base de datos

--- a/odataexample/src/main/resources/application.properties
+++ b/odataexample/src/main/resources/application.properties
@@ -1,12 +1,4 @@
 
-#database.serverName=localhost
-#database.instanceName=
-database.serverName=server2k8
-database.instanceName=server2k14
-database.databaseName=EJERCICIO_JPA
-database.user=sa
-database.password=rv760
-
 hz.cluster.name=EQ016
 hz.cluster.pwd=rv760
 hz.mancenter.url=http://192.168.1.174:8080/mancenter-3.7.5
@@ -16,3 +8,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 #spring.jpa.show-sql=true
 
 spring.jta.transaction-manager-id=odataexample
+
+spring.profiles.active=database-mysql
