--- a/odataexample/pom.xml
+++ b/odataexample/pom.xml
@@ -67,7 +67,10 @@
 			<artifactId>sqljdbc4</artifactId>
 			<version>4</version>
 		</dependency>
-		
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		</dependency>
 		
 		<!-- JPA -->
 		<dependency>
