Extrae nombre del ENTITY SET desde el DATASOURCE

--- a/odataexample/src/main/resources/application.properties
+++ b/odataexample/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
 spring.jta.transaction-manager-id=odataexample
 
-spring.profiles.active=database-mysql
+spring.profiles.active=database-mssql
