--- a/odataexample/src/main/resources/application-database-mssql.properties
+++ b/odataexample/src/main/resources/application-database-mssql.properties
@@ -1,7 +1,9 @@
-database.serverName=server2k8
-database.instanceName=server2k14
-database.user=sa
+database.serverName=localhost
+database.instanceName=
+database.user=eivfinanciero2
 database.password=rv760
 database.poolSize=5
 database.uniqueResourceName=odataexample-mssql
 database.databaseName=EJERCICIO_JPA
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
