--- a/odataexample/src/main/resources/application-database-mysql.properties
+++ b/odataexample/src/main/resources/application-database-mysql.properties
@@ -5,3 +5,5 @@ database.password=asd123
 database.poolSize=5
 database.uniqueResourceName=odataexample-mysql
 database.databaseName=EJERCICIO_JPA
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
