Propiedad: spring.output.ansi.enabled=ALWAYS

--- a/odataexample/src/main/resources/application.properties
+++ b/odataexample/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jta.log-dir=target/transaction-logs
 spring.jta.transaction-manager-id=odataexample
 
 spring.profiles.active=database-mysql
+
+spring.output.ansi.enabled=ALWAYS
