Logging - Graylog server

--- a/odataexample/src/main/resources/application.properties
+++ b/odataexample/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.jta.log-dir=target/transaction-logs
 
 spring.jta.transaction-manager-id=odataexample
 
-spring.profiles.active=database-mysql
+spring.profiles.active=database-mssql
 
 spring.output.ansi.enabled=ALWAYS
