--- a/odataexample/pom.xml
+++ b/odataexample/pom.xml
@@ -30,6 +30,16 @@
 	  	<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+			<exclusions>
+		        <exclusion>
+		            <groupId>org.springframework.boot</groupId>
+		            <artifactId>spring-boot-starter-logging</artifactId>
+		        </exclusion>
+		    </exclusions>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -126,7 +136,21 @@
 		    <version>3.6.1</version>
 		</dependency>
 		
-
+		<!-- https://mvnrepository.com/artifact/org.graylog2/gelfj -->
+		<!-- 
+		<dependency>
+		    <groupId>org.graylog2</groupId>
+		    <artifactId>gelfj</artifactId>
+		    <version>1.1.15</version>
+		</dependency>
+		 -->
+		<!-- https://mvnrepository.com/artifact/org.graylog2.log4j2/log4j2-gelf -->
+<dependency>
+    <groupId>org.graylog2.log4j2</groupId>
+    <artifactId>log4j2-gelf</artifactId>
+    <version>1.3.1</version>
+</dependency>
+		
 	</dependencies>
 	
   <build>
