--- a/odataexample/pom.xml
+++ b/odataexample/pom.xml
@@ -136,20 +136,19 @@
 		    <version>3.6.1</version>
 		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/org.graylog2/gelfj -->
+		<!-- http://logging.paluch.biz/ -->
+		<dependency>
+		    <groupId>biz.paluch.logging</groupId>
+		    <artifactId>logstash-gelf</artifactId>
+		    <version>1.11.1</version>
+		</dependency>
+		<!-- GELF MESSAGES USING TCP -->
 		<!-- 
 		<dependency>
-		    <groupId>org.graylog2</groupId>
-		    <artifactId>gelfj</artifactId>
-		    <version>1.1.15</version>
-		</dependency>
-		 -->
-		<!-- https://mvnrepository.com/artifact/org.graylog2.log4j2/log4j2-gelf -->
-<dependency>
-    <groupId>org.graylog2.log4j2</groupId>
-    <artifactId>log4j2-gelf</artifactId>
-    <version>1.3.1</version>
-</dependency>
+		    <groupId>org.graylog2.log4j2</groupId>
+		    <artifactId>log4j2-gelf</artifactId>
+		    <version>1.3.1</version>
+		</dependency> -->
 		
 	</dependencies>
 	
