--- a/odataexample/src/main/resources/application.properties
+++ b/odataexample/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jta.transaction-manager-id=odataexample
 spring.profiles.active=database-mssql
 
 spring.output.ansi.enabled=ALWAYS
+
+logging.file=target/odataexample-app.log
