Logstash en Docker

--- a/odataexample/src/main/resources/logstash.conf
+++ b/odataexample/src/main/resources/logstash.conf
@@ -1,7 +1,8 @@
 input {
   file {
     type => "java"
-    path => "C:\Users\diego.cairone\git\odataexample-olingo\odataexample\target\odataexample-app.log"
+    #path => "C:\Users\diego.cairone\git\odataexample-olingo\odataexample\target\odataexample-app.log"
+    path => "/log-file/odataexample-app.log"
     codec => multiline {
       pattern => "^%{YEAR}-%{MONTHNUM}-%{MONTHDAY} %{TIME}.*"
       negate => "true"
@@ -41,8 +42,8 @@ output {
   }
   
   rabbitmq {
-	host => "localhost"
-	port => 30000
+	host => "rabbitmq"
+	port => 5672
 	durable => true
 	exchange => "ex_odataexample"
 	exchange_type => "direct"
