Log4j2 - ELK - Graylog

--- a/odataexample/src/main/resources/application.properties
+++ b/odataexample/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jta.log-dir=target/transaction-logs
 
 spring.jta.transaction-manager-id=odataexample
 
-spring.profiles.active=database-mssql
+spring.profiles.active=database-mysql
 
 spring.output.ansi.enabled=ALWAYS
 
