--- a/odataexample/src/main/resources/logstash.conf
+++ b/odataexample/src/main/resources/logstash.conf
@@ -1,13 +1,6 @@
 input {
-  file {
-    type => "java"
-    #path => "C:\Users\diego.cairone\git\odataexample-olingo\odataexample\target\odataexample-app.log"
-    path => "/log-file/odataexample-app.log"
-    codec => multiline {
-      pattern => "^%{YEAR}-%{MONTHNUM}-%{MONTHDAY} %{TIME}.*"
-      negate => "true"
-      what => "previous"
-    }
+  beats {
+    port => 5044
   }
 }
 filter {
@@ -30,25 +23,31 @@ filter {
 
   #Parsing out timestamps which are in timestamp field thanks to previous grok section
   date {
-    match => [ "timestamp" , "yyyy-MM-dd HH:mm:ss.SSS" ]
+    match => [ "timestamp" , "yyyy-MM-dd HH:mm:ss -0300" ]
+    timezone => "UTC"
   }
 }
 output {
-  # Print each event to stdout, useful for debugging. Should be commented out in production.
-  # Enabling 'rubydebug' codec on the stdout output will make logstash
-  # pretty-print the entire event as something similar to a JSON representation.
   stdout {
     codec => rubydebug
   }
-  
-  rabbitmq {
-	host => "rabbitmq"
-	port => 5672
-	durable => true
-	exchange => "ex_odataexample"
-	exchange_type => "direct"
-	key => "odataexample"
-	user => "rabbitmq"
-    password => "rabbitmq"
+  elasticsearch {
+    hosts => ["http://elasticsearch:9200"]
   }
+  if [level] == "ERROR" or [level] == "WARN" {
+    email {
+      to => 'dcairone@eiva.com.ar'
+      from => 'dcairone@eiva.com.ar'
+      subject => "Alert - %{fields[customer]}"
+      body => "Tags: %{tags}\n\\Content:\n%{message}"
+      domain => 'eiva.com.ar'
+      port => 587
+      address => 'mail.eiva.com.ar'
+      username => 'dcairone@eiva.com.ar'
+      password => 'Diegorv760'
+    }
+#   file {
+#     path => "/config-dir/salida.txt"
+#   }
+  }  
 }
