--- a/odataexample/extras/logstash-dir/logstash.conf
+++ b/odataexample/extras/logstash-dir/logstash.conf
@@ -39,15 +39,12 @@ output {
       to => 'dcairone@eiva.com.ar'
       from => 'dcairone@eiva.com.ar'
       subject => "Alert - %{fields[customer]}"
-      body => "Tags: %{tags}\n\\Content:\n%{message}"
+      body => "Tags: %{tags}\nContent:\n%{message}"
       domain => 'eiva.com.ar'
       port => 587
       address => 'mail.eiva.com.ar'
-      username => 'dcairone@eiva.com.ar'
-      password => 'Diegorv760'
+      username => '****'
+      password => '****'
     }
-#   file {
-#     path => "/config-dir/salida.txt"
-#   }
   }  
 }
