--- a/odataexample/extras/logstash-dir/logstash.conf
+++ b/odataexample/extras/logstash-dir/logstash.conf
@@ -1,6 +1,19 @@
 input {
-  beats {
-    port => 5044
+  file {
+    type => "java"
+    start_position => "beginning"
+    ignore_older => 0
+    tags => ["odataexample-app", "diego.cairone"]
+    add_field => {
+      "appID" => "ODATAEXAMPLE"
+      "developer" => "diego.cairone"
+    }
+    path => "/log-file/odataexample-app.log"
+    codec => multiline {
+      pattern => "^%{YEAR}-%{MONTHNUM}-%{MONTHDAY} %{TIME}.*"
+      negate => "true"
+      what => "previous"
+    }
   }
 }
 filter {
@@ -23,8 +36,7 @@ filter {
 
   #Parsing out timestamps which are in timestamp field thanks to previous grok section
   date {
-    match => [ "timestamp" , "yyyy-MM-dd HH:mm:ss -0300" ]
-    timezone => "UTC"
+    match => [ "timestamp" , "yyyy-MM-dd HH:mm:ss.SSS" ]
   }
 }
 output {
@@ -35,16 +47,19 @@ output {
     hosts => ["http://elasticsearch:9200"]
   }
   if [level] == "ERROR" or [level] == "WARN" {
-    email {
-      to => 'dcairone@eiva.com.ar'
-      from => 'dcairone@eiva.com.ar'
-      subject => "Alert - %{fields[customer]}"
-      body => "Tags: %{tags}\nContent:\n%{message}"
-      domain => 'eiva.com.ar'
-      port => 587
-      address => 'mail.eiva.com.ar'
-      username => '****'
-      password => '****'
+    http {
+      id => "to_graylog"
+      http_method => "post"
+      url => "http://192.168.1.222:12202/gelf"
+      mapping => {
+        "full_message" => "%{message}"
+        "short_message" => "%{logmessage}"
+        "host" => "%{host}"
+        "_logLevel" => "%{level}"
+        "_class" => "%{class}"
+        "_customer" => "%{fields[customer]}"
+        "_appName" => "%{fields[appName]}"
+      }
     }
   }  
 }
